--- a/ControlV2/ControlV2.csproj
+++ b/ControlV2/ControlV2.csproj
@@ -66,6 +66,12 @@
     <Compile Include="FrmRegistrarUsuario.Designer.cs">
       <DependentUpon>FrmRegistrarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRegistrarVehículo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegistrarVehículo.Designer.cs">
+      <DependentUpon>FrmRegistrarVehículo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -73,6 +79,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistrarUsuario.resx">
       <DependentUpon>FrmRegistrarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistrarVehículo.resx">
+      <DependentUpon>FrmRegistrarVehículo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -109,6 +118,9 @@
       <Project>{78B6C3EC-5E9C-4D95-8787-4CFA1C7FEC46}</Project>
       <Name>Entidades</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\flag.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
